// Copyright (c) 2021, SafePoint.  All rights reserved.
// Copyright (c) 2018-2019, AT&T Intellectual Property.  All rights reserved.
//
// SPDX-License-Identifier: LGPL-2.1-only
//

syntax="proto2";

message FlowStatOpReq {
	//empty
}

message FlowStatOpResp {
	optional uint32 count = 1;
}